--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,19 @@ repositories {
 	mavenCentral()
 }
 
+test {
+	useJUnitPlatform() // JUnit 5를 지원
+	filter {
+		includeTestsMatching 'jpabook.jpashop.service.MemberServiceTest'
+	}
+}
+sourceSets {
+	test {
+		java {
+			srcDirs = ['src/test/java']
+		}
+	}
+}
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
@@ -33,6 +46,7 @@ dependencies {
 	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6'
 
 	testImplementation 'junit:junit:4.13.1'
+	testImplementation 'junit:junit:4.13.2' // JUnit 4 추가
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
