--- a/build.gradle
+++ b/build.gradle
@@ -25,11 +25,12 @@ repositories {
 }
 
 test {
-	useJUnitPlatform() // JUnit 5를 지원
+	useJUnit() // JUnit 4 지원
 	filter {
 		includeTestsMatching 'jpabook.jpashop.service.MemberServiceTest'
 	}
 }
+
 sourceSets {
 	test {
 		java {
@@ -37,7 +38,9 @@ sourceSets {
 		}
 	}
 }
+
 dependencies {
+	// Springboot
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -45,12 +48,14 @@ dependencies {
 
 	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6'
 
-	testImplementation 'junit:junit:4.13.1'
+	// Test
 	testImplementation 'junit:junit:4.13.2' // JUnit 4 추가
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
